--- a/Entregable 2 - Carga de datos en Redshift.ipynb
+++ b/Entregable 2 - Carga de datos en Redshift.ipynb
@@ -1010,23 +1010,34 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "3ae14bc0",
+   "cell_type": "markdown",
+   "id": "35a4131e",
    "metadata": {},
    "source": [
     "Creo una tabla en Redshift con el siguiente script:\n",
     "\n",
     "CREATE TABLE free_games_2 (\n",
+    "\n",
     "  id INT NOT NULL DISTKEY,\n",
+    "  \n",
     "  title VARCHAR(1000),\n",
+    "  \n",
     "  short_description VARCHAR(1000),\n",
+    "  \n",
     "  genre VARCHAR,\n",
+    "  \n",
     "  platform VARCHAR,\n",
+    "  \n",
     "  publisher VARCHAR,\n",
+    "  \n",
     "  developer VARCHAR,\n",
-    "  release_date TIMESTAMP SORTKEY,\n",
+    "  \n",
+    "  release_date DATE SORTKEY,\n",
+    "  \n",
     "  freetogame_profile_url VARCHAR(1000),\n",
+    "  \n",
     "  price FLOAT8\n",
+    "  \n",
     ");"
    ]
   },
